--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.logo-nav{
+    height: 120px;
+}
+
 .hero{
     height: 512px;
 }
@@ -81,11 +85,6 @@
     padding: 16px;
 }
 
-.dlnow{
-    display: inline;
-    margin: 8px;
-}
-
 .blks{
     display: flex;
     flex-wrap: wrap;
@@ -105,6 +104,62 @@
 .blk img{
    width: 120px;
    height:120px; 
+}
+
+.vision{
+    text-align: center;
+    background-color: var(--white);
+}
+
+.vision h5{
+    padding: 16px;
+    color: var(--black);
+}
+
+.blks2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 16px;
+}
+
+.blk2{
+    padding: 8px;
+    background-color: var(--text-white);
+    border-radius: 16px;
+    width: 280px;
+    text-align: center;
+    margin:16px
+}
+
+.team{
+    text-align: center;
+    background-color: var(--secondary);
+}
+
+.team h5{
+    padding: 16px;
+    color: var(--text-white);
+}
+
+.team img{
+    width: 100px;
+    height:70%; 
+}
+
+.bmc{
+    text-align: center;
+    background-color: var(--white);
+}
+
+.bmc h5{
+    padding: 16px;
+    color: var(--black);
+}
+
+.dlnow{
+    display: inline;
+    margin: 8px;
 }
 
 footer{
